--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-libs @ git+https://@github.com/quintenroets/libs
-superpathlib @ git+https://@github.com/quintenroets/superpathlib
+libs @ git+https://github.com/quintenroets/libs
+superpathlib @ git+https://github.com/quintenroets/superpathlib
 PyGithub
