--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = autogit
 version = 1.0.0
 author = Quinten Roets
 author_email = quinten.roets@gmail.com
-url = https://github.com/quintenroets/music
+url = https://github.com/quintenroets/autogit
 license = MIT
 
 [options]
